Sincroniza Codigo Apeu nian

--- a/sia_dev/public/css/style.css
+++ b/sia_dev/public/css/style.css
@@ -5073,6 +5073,14 @@ ul {
     background-color: #ffae01;
 }
 
+.btn-gradient-sia {
+    /* background-color: #21f32c; */
+    background: -webkit-gradient(linear, left top, right top, from(#21f32c), to(#02c044));
+    background: -webkit-linear-gradient(left, #21f32c, #02c044);
+    background: -o-linear-gradient(left, #21f32c, #02c044);
+    background: linear-gradient(to right, #21f32c, #02c044);
+}
+
 .gradient-dodger-blue {
     background: -webkit-gradient(linear, left top, right top, from(#2196f3), to(#21bff3));
     background: -webkit-linear-gradient(left, #2196f3, #21bff3);
