--- a/sia_dev/public/css/style.less
+++ b/sia_dev/public/css/style.less
@@ -92,7 +92,7 @@ Version: 1.0
 [01] TYPOGRAPHY
 =========================================================================*/
 
-// @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
 
 html {
     height: 100%;
